:recycle: change to stopusingfacebook

--- a/public/index.html
+++ b/public/index.html
@@ -5,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>Boycott Facebook | Home</title>
+    <title>Stop Using Facebook | Home</title>
     <!-- Twitter Card data -->
-    <meta name="twitter:card" value="Boycott Facebook | Home">
-    <meta name="Description" content="A curated list of reasons to boycott Facebook and how to do it."/>
+    <meta name="twitter:card" value="Stop using facebook | Home">
+    <meta name="Description" content="A curated list of reasons to stop using Facebook and how to do it."/>
     <!-- Open Graph data -->
-    <meta property="og:title" content="Boycott Facebook | A curated list of reasons to boycott Facebook and how to do it."/>
+    <meta property="og:title" content="Stop using Facebook | A curated list of reasons to stop using Facebook and how to do it."/>
     <meta property="og:type" content="website"/>
-    <meta property="og:url" content="https://www.boycottfacebook.co"/>
+    <meta property="og:url" content="https://www.stopusingfacebook.co"/>
     <meta property="og:image" content="https://snag.gy/vh8q2G.jpg"/>
-    <meta property="og:description" content="A curated list of reasons to boycott Facebook and how to do it."/>
+    <meta property="og:description" content="A curated list of reasons to stop using Facebook and how to do it."/>
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
