:sparkles: add redirect and snaggy pic

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <meta property="og:title" content="Stop using Facebook | A curated list of reasons to stop using Facebook and how to do it."/>
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="https://www.stopusingfacebook.co"/>
-    <meta property="og:image" content="https://snag.gy/vh8q2G.jpg"/>
+    <meta property="og:image" content="https://i.snag.gy/uaTEfx.jpg"/>
     <meta property="og:description" content="A curated list of reasons to stop using Facebook and how to do it."/>
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
